<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:divider="@drawable/account_line"
    android:dividerPadding="1dp"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="20dp"
    android:showDividers="middle|end|beginning">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/text"
        android:gravity="center"
        android:onClick="text"
        android:text="@string/display_text"
        android:textColor="@color/white"
        android:textSize="18sp"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@color/text"
        android:gravity="center"
        android:onClick="texts"
        android:text="@string/display_texts"
        android:textColor="@color/white"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@color/text"
        android:gravity="center"
        android:onClick="pic"
        android:text="@string/display_pic"
        android:textColor="@color/white"
        android:textSize="18sp"/>
</LinearLayout>