<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/text_all"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/background"
              android:orientation="vertical"
              android:paddingLeft="16dp"
              android:paddingRight="16dp">

    <LinearLayout
        android:id="@+id/text_set"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/account_line"
        android:dividerPadding="1dp"
        android:orientation="vertical"
        android:showDividers="middle|end|beginning">

        <LinearLayout
            android:id="@+id/text_font"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_text"
                android:textColor="@color/white"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/text_text_font"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/arrow"
                android:gravity="right|center_vertical"
                android:text="@string/sunmi_font"
                android:textColor="@color/gray"
                android:textSize="14sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/text_character"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/characterset"
                android:textColor="@color/white"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/text_text_character"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/arrow"
                android:gravity="right|center_vertical"
                android:text="GB18030"
                android:textColor="@color/gray"
                android:textSize="14sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/text_size"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/size_text"
                android:textColor="@color/white"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/text_text_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/arrow"
                android:gravity="right|center_vertical"
                android:text="24"
                android:textColor="@color/gray"
                android:textSize="14sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:background="@color/white1"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bold_text"
                android:textColor="@color/white"
                android:textSize="18sp"/>

            <CheckBox
                android:id="@+id/text_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/underline_text"
                android:textColor="@color/white"
                android:textSize="18sp"/>

            <CheckBox
                android:id="@+id/text_underline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:padding="20dp">

            <EditText
                android:id="@+id/text_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_print"
                android:textColor="@color/text2"/>
        </ScrollView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="1dp"
            android:layout_marginTop="20dp"
            android:background="@color/text"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/print"
            android:textColor="@color/white"
            android:textSize="18sp"/>
    </LinearLayout>
</LinearLayout>