<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/background"
              android:divider="@drawable/account_line"
              android:dividerPadding="1dp"
              android:orientation="vertical"
              android:paddingLeft="16dp"
              android:paddingRight="16dp"
              android:showDividers="middle|end|beginning">

    <LinearLayout
        android:id="@+id/qr_content"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content_qrcode"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/qr_text_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/arrow"
            android:gravity="right|center_vertical"
            android:text="www.sunmi.com"
            android:textColor="@color/gray"
            android:textSize="14sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/qr_size"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/size_qrcode"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/qr_text_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/arrow"
            android:gravity="right|center_vertical"
            android:text="8"
            android:textColor="@color/gray"
            android:textSize="14sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/qr_el"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_qrcode"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/qr_text_el"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/arrow"
            android:gravity="right|center_vertical"
            android:text="纠错级别H (30%)"
            android:textColor="@color/gray"
            android:textSize="14sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/qr_align"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/align_form"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/qr_align_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/arrow"
            android:gravity="right|center_vertical"
            android:text="@string/align_left"
            android:textColor="@color/gray"
            android:textSize="14sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/qr_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scaleType="fitCenter"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginRight="1dp"
            android:background="@color/text"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/print"
            android:textColor="@color/white"
            android:textSize="18sp"/>
    </LinearLayout>
</LinearLayout>