<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/background"
              android:divider="@drawable/account_line"
              android:dividerPadding="1dp"
              android:orientation="vertical"
              android:paddingLeft="16dp"
              android:paddingRight="16dp"
              android:showDividers="middle|end|beginning">

    <LinearLayout
        android:id="@+id/bc_content"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content_barcode"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/bc_text_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/arrow"
            android:gravity="right|center_vertical"
            android:text="201705070507"
            android:textColor="@color/gray"
            android:textSize="14sp"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/bc_encode"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/encode_barcode"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/bc_text_encode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/arrow"
            android:gravity="right|center_vertical"
            android:text="CODE128A"
            android:textColor="@color/gray"
            android:textSize="14sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bc_position"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_position"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/bc_text_position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/arrow"
            android:gravity="right|center_vertical"
            android:text="条码上方"
            android:textColor="@color/gray"
            android:textSize="14sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bc_height"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/barcode_height"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/bc_text_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/arrow"
            android:gravity="right|center_vertical"
            android:text="162"
            android:textColor="@color/gray"
            android:textSize="14sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bc_width"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/barcode_width"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/bc_text_width"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/arrow"
            android:gravity="right|center_vertical"
            android:text="2"
            android:textColor="@color/gray"
            android:textSize="14sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/bc_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="20dp"
            android:scaleType="center"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginRight="1dp"
            android:background="@color/text"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/print"
            android:textColor="@color/white"
            android:textSize="18sp"/>
    </LinearLayout>
</LinearLayout>